--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
         <form class="form" id="form">
           <h2 class="section__title form__title">Contact me</h2>
           <div class="form__item">
-            <input id="formEmail" class="form__input _email" name="E-mail" type="email" placeholder="E-mail">
+            <input id="formEmail" class="form__input _email" autocomplete="off" name="E-mail" type="email" placeholder="E-mail" required>
           </div>
           <div class="form__item">
-            <input id="formPhone" class="form__input _phone" name="Phone" type="tel" placeholder="Phone" maxlength="10">
+            <input id="formPhone" class="form__input _phone" autocomplete="off" name="Phone" type="tel" placeholder="Phone (format: 3803456789)" maxlength="10" pattern="[0-9]{10}" required>
           </div>
           <div class="form__item item-messege">
-            <input id="formMessage" class="form__input _message placeholder-messege" name="Message" type="text" placeholder="Message">
+            <input id="formMessage" class="form__input _message placeholder-messege" autocomplete="off" name="Message" type="text" placeholder="Message" required>
           </div>
           <button class="form__button">Send message</button>
 
