--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <h2 class="section__title">Video</h2>
       <hr class="line">
       <!--<img class="video__temp" src="./assets/bigfoto/temp/video-player.jpg" alt="">-->
-      <video class="video__tape"><source class="video" src="./assets/video/portfolio.mp4"></video>
+      <video class="video__tape"><source class="video" src="./assets/video/foto-stroll.mp4"></video> //original file - "portfolio.mp4"
       <img class="video__bottom play" src="./assets/icons/play-bottom.svg" alt="play-bottom" width="130">
     </section>
 
