fix: fix translate and some styles

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="pop-up">
       <form class="form prises-form">
         <h2 class="section__title prises-form__title">Leave your contacts</h2>
-        <p class="prises-form__title">and I will connect with you resently:</p>
+        <p class="prises-form__title title-promise">and I will connect with you soon:</p>
 
         <div class="form__item">
           <input id="formEmail1" class="form__input _email" autocomplete="off" name="E-mail" type="email" placeholder="E-mail" required>
